# services-framework

./: .gitignore  LICENSE  README.md
framework/: Cargo.toml
framework/src/service/: mod.rs
macros/: Cargo.toml  foobar.rs
macros/service-metadata/foobar/: foobar_message.json  print_message.json
macros/src/: lib.rs
macros/tests/: expanded.rs  it_compiles.rs  main.rs
