[package]
name = "services-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "net"] }
pin-project = "1"
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = {version = "0.7.8", features = ["codec"] }
serde = "1"
rand = "0.8"
tower = "0.4"
bincode = "1.3"
bytes = "1.4.0"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }