[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
services-framework = {path = "../framework" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.96"
axum = "0.6"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
trybuild = "1"

[lib]
proc-macro = true